<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/profile_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_16ssp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfilePage"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_person_dummy"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_info"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_name"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtPatientName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="Ayşenur Sert"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_age"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtPatientAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="11.11.1995"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_number"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtPatientNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="5065081651"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_mail"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtPatientEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="boyrazgiray@gmail.com"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine_info"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMedicineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </android.support.v7.widget.RecyclerView>

           <RelativeLayout
               android:id="@+id/relAddMedicine"
               android:clickable="true"
               android:focusable="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="@dimen/_20sdp"
               android:layout_marginTop="@dimen/_5sdp"
               android:layout_gravity="end"
               android:paddingTop="@dimen/_8sdp"
               android:paddingBottom="@dimen/_8sdp"
               android:paddingEnd="@dimen/_10sdp"
               android:paddingStart="@dimen/_1sdp"
               android:background="@drawable/icon_medicine_background">

               <ImageView
                   android:id="@+id/imgMedicine"
                   android:layout_width="@dimen/_20sdp"
                   android:layout_height="@dimen/_20sdp"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_centerVertical="true"
                   android:src="@drawable/icon_medicine"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerVertical="true"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_toEndOf="@id/imgMedicine"
                   android:text="@string/add_medicine"
                   android:textSize="@dimen/_12ssp"
                   android:textColor="@color/white"/>

           </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>