<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/txtAddMedicineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_date"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/txtAddMedicineDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="DD.MM.YYYY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Times in a day"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/txtAddMedicineFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Drug Use"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center">
            <RadioButton
                android:id="@+id/rdLimetedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:text="Limeted date"/>
            <RadioButton
                android:id="@+id/rdContinuousDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:text="Continuous date"/>
        </RadioGroup>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/diaAddMedicine"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="end"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_1sdp"
        android:background="@drawable/icon_medicine_background">

        <ImageView
            android:id="@+id/imgMedicine"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_medicine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@id/imgMedicine"
            android:text="@string/add_medicine"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"/>

    </RelativeLayout>


</LinearLayout>